--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     .alert.warn{background:rgba(227,155,39,.08);border:1px solid rgba(227,155,39,.28);color:#7a4a08}
     .alert.no{background:rgba(217,83,79,.08);border:1px solid rgba(217,83,79,.28);color:#842029}
     .alert.ok{background:rgba(25,135,84,.08);border:1px solid rgba(25,135,84,.28);color:#0f5132}
+    .hide{display:none}
   </style>
 </head>
 <body>
@@ -44,7 +45,7 @@
 
     <div class="panel">
       <h2>Where to find your official lot & building sizes</h2>
-      <p class="tiny">You can look up recorded information through the County’s ParcelQuest site: <a href="https://assr.parcelquest.com/" target="_blank" rel="noopener">assr.parcelquest.com</a>. Then enter the numbers below.</p>
+      <p class="tiny">Look up recorded information via ParcelQuest: <a href="https://assr.parcelquest.com/" target="_blank" rel="noopener">assr.parcelquest.com</a>. Then enter those numbers below.</p>
     </div>
 
     <div class="panel">
@@ -52,13 +53,14 @@
       <div class="row"><label for="lot">Lot area (sf)</label><input id="lot" type="number" min="0" step="1" placeholder="e.g., 6,000"/></div>
       <div class="row"><label for="zone">Zoning</label><select id="zone"><option value="RS-L">RS-L</option><option value="OTHER">Other residential</option></select></div>
       <div class="row"><label for="bldg">Building footprint (impervious; sf)</label><input id="bldg" type="number" min="0" step="1" placeholder="e.g., 1,800"/></div>
+      <p class="tiny">Lot area = total parcel area. Building footprint = plan‑view area of all roofed structures.</p>
     </div>
 
     <div class="panel">
       <h2>2) Yard Areas</h2>
       <div class="row"><label for="frontArea">Front yard area (sf)</label><input id="frontArea" type="number" min="0" step="1" placeholder="e.g., 1,800"/></div>
       <div class="row"><label for="rearSideArea">Rear + side yard area (sf)</label><input id="rearSideArea" type="number" min="0" step="1" placeholder="e.g., 3,600"/></div>
-      <div id="areaCheck" class="alert warn" style="display:none"></div>
+      <div id="areaCheck" class="alert warn hide"></div>
     </div>
 
     <div class="panel">
@@ -67,6 +69,7 @@
       <div class="row"><label for="frontOther_exist">Front walkways & other hardscape (sf)</label><input id="frontOther_exist" type="number" min="0" step="1"/></div>
       <div class="row"><label for="rearPave_exist">Rear + side paving (sf)</label><input id="rearPave_exist" type="number" min="0" step="1"/></div>
       <div class="row"><label>Total existing impermeable paving (sf)</label><div id="imperv_exist" class="tiny">—</div></div>
+      <p class="tiny">Enter <em>impermeable</em> portions only (concrete, asphalt, compacted gravel). Permeable pavers count toward yard hardscape limits but not toward lot‑wide impervious total.</p>
     </div>
 
     <div class="panel">
@@ -76,31 +79,198 @@
       <div class="row"><label for="rearPave_delta">Δ Rear + side paving (sf)</label><input id="rearPave_delta" type="number" step="1"/></div>
       <div class="row"><label>Total proposed change in impermeable area (sf)</label><div id="imperv_delta" class="tiny">—</div></div>
       <div class="btns"><button id="calc">Calculate</button><button id="reset">Reset</button><button id="print">Print / Save PDF</button></div>
-      <div id="permit120" class="alert warn" style="display:none"></div>
+      <div id="permit120" class="alert warn hide"></div>
+    </div>
+
+    <div class="panel hide" id="results" aria-live="polite">
+      <h2>Results</h2>
+      <div class="cards">
+        <div class="card" id="card_front_drive">
+          <h3>Front: Driveway ≤ 35% of front yard</h3>
+          <div class="kv"><span>Driveway area</span> <b id="fd_area">—</b></div>
+          <div class="kv"><span>Percent of front yard</span> <b id="fd_pct">—</b></div>
+          <div><span id="fd_badge" class="badge">—</span></div>
+        </div>
+        <div class="card" id="card_front_other">
+          <h3>Front: Walkways & other hardscape ≤ 25%</h3>
+          <div class="kv"><span>Other hardscape area</span> <b id="fo_area">—</b></div>
+          <div class="kv"><span>Percent of front yard</span> <b id="fo_pct">—</b></div>
+          <div><span id="fo_badge" class="badge">—</span></div>
+        </div>
+        <div class="card" id="card_front_land">
+          <h3>Front: Landscaped area ≥ 40%</h3>
+          <div class="kv"><span>Landscaped area</span> <b id="fl_area">—</b></div>
+          <div class="kv"><span>Percent of front yard</span> <b id="fl_pct">—</b></div>
+          <div><span id="fl_badge" class="badge">—</span></div>
+        </div>
+        <div class="card" id="card_rs_pave">
+          <h3>Rear + side: Total paving ≤ 60%</h3>
+          <div class="kv"><span>Total paving</span> <b id="rs_area">—</b></div>
+          <div class="kv"><span>Percent of rear + side</span> <b id="rs_pct">—</b></div>
+          <div><span id="rs_badge" class="badge">—</span></div>
+        </div>
+        <div class="card" id="card_rs_land">
+          <h3>Rear + side: Landscaped area ≥ 40%</h3>
+          <div class="kv"><span>Landscaped area</span> <b id="rl_area">—</b></div>
+          <div class="kv"><span>Percent of rear + side</span> <b id="rl_pct">—</b></div>
+          <div><span id="rl_badge" class="badge">—</span></div>
+        </div>
+        <div class="card" id="card_storm">
+          <h3>Stormwater: Impervious coverage (lot-wide)</h3>
+          <div class="kv"><span>Impervious total (bldg + paving)</span> <b id="imp_area">—</b></div>
+          <div class="kv"><span>Percent of lot</span> <b id="imp_pct">—</b></div>
+          <div><span id="imp_badge" class="badge">—</span></div>
+          <div id="imp_note" class="tiny" style="margin-top:6px"></div>
+        </div>
+      </div>
+      <div class="hr"></div>
+      <div class="tiny">
+        <div><strong>Permit trigger:</strong> New paving & hardscape additions over <b>120 sf</b> require a paving permit (Zoning Clearance). <span id="permitLine" class="muted"></span></div>
+        <div>“Landscaped area” excludes pavers, bricks, and other hard surfaces (even if permeable). Calculations are advisory; verify with the City. Source: <a href="https://www.codepublishing.com/CA/Hercules/#!/Hercules13/Hercules1330.html#13-30" target="_blank" rel="noopener">Hercules Municipal Code §13-30.750</a>.</div>
+      </div>
     </div>
   </div>
+
 <script>
   const $ = (id)=>document.getElementById(id);
   const fmt = (n)=>isFinite(n)?new Intl.NumberFormat().format(n):'—';
+  const pct = (n)=>isFinite(n)?(n*100).toFixed(1)+'%':'—';
   const readNum=(id)=>parseFloat($(id).value)||0;
 
-  function calc(){
+  function updateImpervTotals(){
     const fd0=readNum('frontDrive_exist');
     const fo0=readNum('frontOther_exist');
     const rs0=readNum('rearPave_exist');
     const fdD=readNum('frontDrive_delta');
     const foD=readNum('frontOther_delta');
     const rsD=readNum('rearPave_delta');
-    const existing=fd0+fo0+rs0;
-    const delta=fdD+foD+rsD;
+    const existing=fd0+fo0+rs0; // treating inputs as impermeable amounts
+    const delta=fdD+foD+rsD;    // delta to impermeable
     $('imperv_exist').textContent=fmt(existing);
     $('imperv_delta').textContent=fmt(delta);
+    return {existing, delta};
   }
 
-  $('calc').addEventListener('click',calc);
-  $('reset').addEventListener('click',()=>{document.querySelectorAll('input').forEach(i=>i.value='');$('imperv_exist').textContent='—';$('imperv_delta').textContent='—';});
+  function setBadge(id, ok, on='Complies', off='Does not comply'){
+    const el=$(id); el.className='badge ' + (ok? 'ok':'no'); el.textContent= ok? '✔ '+on : '✖ '+off;
+  }
+
+  function calculateAndShow(){
+    const lot = readNum('lot');
+    const zone = $('zone').value;
+    const bldg = readNum('bldg');
+    const frontArea = readNum('frontArea');
+    const rearSideArea = readNum('rearSideArea');
+
+    const fd0=readNum('frontDrive_exist');
+    const fo0=readNum('frontOther_exist');
+    const rs0=readNum('rearPave_exist');
+    const fdD=readNum('frontDrive_delta');
+    const foD=readNum('frontOther_delta');
+    const rsD=readNum('rearPave_delta');
+
+    const fd = Math.max(0, fd0 + fdD);
+    const fo = Math.max(0, fo0 + foD);
+    const rs = Math.max(0, rs0 + rsD);
+
+    // Landscape areas
+    const frontLand = Math.max(0, frontArea - (fd + fo));
+    const rearLand  = Math.max(0, rearSideArea - rs);
+
+    // Percents
+    const fdPct = frontArea>0 ? fd/frontArea : NaN;
+    const foPct = frontArea>0 ? fo/frontArea : NaN;
+    const flPct = frontArea>0 ? frontLand/frontArea : NaN;
+    const rsPct = rearSideArea>0 ? rs/rearSideArea : NaN;
+    const rlPct = rearSideArea>0 ? rearLand/rearSideArea : NaN;
+
+    // Compliance
+    const fdOK = fdPct <= 0.35 + 1e-9;
+    const foOK = foPct <= 0.25 + 1e-9;
+    const flOK = flPct >= 0.40 - 1e-9;
+    const rsOK = rsPct <= 0.60 + 1e-9;
+    const rlOK = rlPct >= 0.40 - 1e-9;
+
+    // Impervious totals (lot‑wide)
+    const {existing: impExist, delta: impDelta} = updateImpervTotals();
+    const impPaving = Math.max(0, impExist + impDelta);
+    const imp = impPaving + bldg;
+    const impPct = lot>0 ? imp/lot : NaN;
+    const impOver = zone==='RS-L' ? impPct>0.47+1e-9 : false;
+
+    // Permit trigger (count only additions)
+    const added = [fdD, foD, rsD].reduce((s,v)=> s + Math.max(0,v||0), 0);
+
+    // Area check
+    const sumKnown = bldg + frontArea + rearSideArea;
+    const ac = $('areaCheck');
+    if (lot>0 && sumKnown>0 && Math.abs(sumKnown - lot) > lot*0.03) {
+      ac.classList.remove('hide');
+      ac.textContent = `Heads up: building + front + rear/side = ${fmt(sumKnown)} sf, which differs from lot area (${fmt(lot)} sf). Double-check your areas.`;
+    } else { ac.classList.add('hide'); ac.textContent=''; }
+
+    // Write outputs
+    $('fd_area').textContent = fmt(fd) + ' sf';
+    $('fo_area').textContent = fmt(fo) + ' sf';
+    $('rs_area').textContent = fmt(rs) + ' sf';
+    $('fl_area').textContent = fmt(frontLand) + ' sf';
+    $('rl_area').textContent = fmt(rearLand) + ' sf';
+
+    $('fd_pct').textContent = pct(fdPct);
+    $('fo_pct').textContent = pct(foPct);
+    $('rs_pct').textContent = pct(rsPct);
+    $('fl_pct').textContent = pct(flPct);
+    $('rl_pct').textContent = pct(rlPct);
+
+    setBadge('fd_badge', fdOK);
+    setBadge('fo_badge', foOK);
+    setBadge('fl_badge', flOK);
+    setBadge('rs_badge', rsOK);
+    setBadge('rl_badge', rlOK);
+
+    $('imp_area').textContent = fmt(imp) + ' sf';
+    $('imp_pct').textContent = pct(impPct);
+    const impHost = $('imp_badge');
+    if (!isFinite(impPct)) { impHost.className='badge warn'; impHost.textContent='ℹ Enter lot & impervious inputs'; $('imp_note').textContent=''; }
+    else if (zone==='RS-L' && impOver) { impHost.className='badge no'; impHost.textContent='✖ Exceeds 47% (RS-L) — engineer calculations required'; $('imp_note').textContent='Per §13-30.750(C), if impervious (incl. structures) is > 47% in RS-L, submit civil engineer runoff calcs to the City Engineer.'; }
+    else { impHost.className='badge ok'; impHost.textContent='✔ Within advisory RS-L threshold'; $('imp_note').textContent = zone==='OTHER' ? 'For other residential zones, engineer submittal may be required per administrative regulations. Consult the City Engineer.' : ''; }
+
+    const p = $('permit120');
+    if (added > 120) { p.classList.remove('hide'); p.className='alert warn'; p.textContent = `This project adds approximately ${fmt(added)} sf of new paving/hardscape. A paving permit (Zoning Clearance) is required per §13-30.750(2).`; }
+    else if (added>0) { p.classList.remove('hide'); p.className='alert ok'; p.textContent = `New paving/hardscape ~ ${fmt(added)} sf (≤ 120 sf). Zoning Clearance not triggered by size threshold.`; }
+    else if (added===0) { p.classList.add('hide'); }
+    else { p.classList.remove('hide'); p.className='alert ok'; p.textContent = 'Net reduction in paving — permit size threshold not triggered.'; }
+
+    $('permitLine').textContent = added? ` (your additions: ~${fmt(added)} sf)` : '';
+
+    // Reveal results panel
+    $('results').classList.remove('hide');
+    // Scroll to results for clarity
+    $('results').scrollIntoView({behavior:'smooth', block:'start'});
+  }
+
+  // Wire up
+  $('calc').addEventListener('click', calculateAndShow);
+  $('reset').addEventListener('click',()=>{
+    document.querySelectorAll('input').forEach(i=>i.value='');
+    $('zone').value='RS-L';
+    $('imperv_exist').textContent='—';
+    $('imperv_delta').textContent='—';
+    $('areaCheck').classList.add('hide');
+    $('permit120').classList.add('hide');
+    $('results').classList.add('hide');
+  });
   $('print').addEventListener('click',()=>window.print());
-  document.querySelectorAll('input').forEach(el=>el.addEventListener('input',()=>{clearTimeout(window.__deb);window.__deb=setTimeout(calc,100);}));
+
+  // Keep totals in steps 3 & 4 live while typing
+  document.querySelectorAll('input, select').forEach(el=>{
+    el.addEventListener('input', ()=>{ updateImpervTotals(); });
+  });
+
+  // Footer permit line placeholder
+  const foot = document.createElement('div');
+  foot.innerHTML = `<div class="panel hide" id="footInfo"><div class="tiny"><strong>Permit trigger:</strong> New paving & hardscape additions over <b>120 sf</b> require a paving permit (Zoning Clearance). <span id="permitLine" class="muted"></span></div></div>`;
+  document.body.appendChild(foot);
 </script>
 </body>
 </html>
