--- a/index.html
+++ b/index.html
@@ -37,11 +37,39 @@
     .alert.no{background:rgba(217,83,79,.08);border:1px solid rgba(217,83,79,.28);color:#842029}
     .alert.ok{background:rgba(25,135,84,.08);border:1px solid rgba(25,135,84,.28);color:#0f5132}
     .hide{display:none}
+ /* --- Figure 13-30.751 styles --- */
+.figure {
+  text-align: center;
+  margin: 12px 0 18px;
+}
+.figure img {
+  max-width: 100%;
+  height: auto;
+  border: 1px solid var(--line);
+  border-radius: 10px;
+  box-shadow: 0 3px 14px rgba(31,63,104,.05);
+}
+.figure figcaption {
+  font-size: .85rem;
+  color: var(--muted);
+  margin-top: 6px;
+}
+
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>Residential Yard Paving Compliance Calculator <span class="tiny">(Hercules Municipal Code §13-30.750)</span></h1>
+<!-- Figure 13-30.751 (embedded as base64 for single-file deploys) -->
+<figure class="figure" aria-describedby="fig-1330751">
+  <img
+    alt="Figure 13-30.751 — Limits on Paving and Hardscaping for Residential Front, Rear, and Side Yards"
+    src=""
+    loading="eager" decoding="async" />
+  <figcaption id="fig-1330751">
+    Figure 13-30.751 (Limits on Paving and Hardscaping for Residential Front, Rear, and Side Yards)
+  </figcaption>
+</figure>
 
     <div class="panel">
       <h2>Where to find your official lot & building sizes</h2>
