--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     <h1>Residential Yard Paving Compliance Calculator <span class="tiny">(Hercules Municipal Code §13-30.750)</span></h1>
     <!-- Figure 13-30.751 (embedded image) -->
     
-<!-- Figure 13-30.751 (embedded as base64 for single-file deploys) -->
-<figure class="figure" aria-describedby="fig-1330751">
+<!-- Figure 13-30.751 — Residential Paving Diagram -->
+<figure class="figure" aria-describedby="fig-1330751" style="text-align:center;margin:16px 0;">
   <img
+    src="./Screenshot%202025-11-05%20160901.png"
     alt="Figure 13-30.751 — Limits on Paving and Hardscaping for Residential Front, Rear, and Side Yards"
-    src=""
-    loading="eager" decoding="async" />
-  <figcaption id="fig-1330751">
-    Figure 13-30.751 (Limits on Paving and Hardscaping for Residential Front, Rear, and Side Yards)
+    style="max-width:100%;border-radius:10px;box-shadow:0 3px 12px rgba(0,0,0,0.25);">
+  <figcaption id="fig-1330751" class="tiny" style="margin-top:6px;color:#5a5a5a;">
+    Figure 13-30.751 — Limits on Paving and Hardscaping for Residential Front, Rear, and Side Yards
   </figcaption>
 </figure>
 
