--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>Residential Yard Paving Compliance Calculator <span class="tiny">(Hercules Municipal Code §13-30.750)</span></h1>
+   <h1>
+  Residential Yard Paving Compliance Calculator
+  <span class="tiny">
+    (<a href="https://www.codepublishing.com/CA/Hercules/#!/Hercules13/Hercules1330.html#13-30.750"
+        target="_blank" rel="noopener noreferrer">
+      Hercules Municipal Code §13-30.750
+    </a>)
+  </span>
+</h1>
     <!-- Figure 13-30.751 (embedded image) -->
     
 <!-- Figure 13-30.751 — Residential Paving Diagram -->
